--- a/style-base.css
+++ b/style-base.css
@@ -3,6 +3,7 @@
 }
 /* per compensare spazio della navbar fixed di BS4*/
 body{padding-top: 40px;}
+form{padding-top: 40px;}
 
 img{
     max-width: 100%;
